# Coursework_django_rest_framework

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  docker-ci-cd.yml
bot/: apps.py  tasks.py  tests.py
config/: settings.py  urls.py
habits/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_rename_related_hobit_habit_related_habit.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
